# blade-ink-python

./: .gitignore  AGENTS.md  README.md  README.rst  setup.cfg  setup.py  update-natives.sh
.github/workflows/: pylint.yml  python-publish.yml
bink/: Choices.py  Story.py  Tags.py  __init__.py  _ffi.py  choices.py  loadlib.py  story.py  tags.py  value.py
bink/native/arm64/: libbink.dylib
bink/native/x86_64/: libbink.dylib
tests/: story_tests.py  test_choices.py  test_ffi_api.py  test_story.py  test_tags.py
