[metadata]
name = bink
version = 0.3.1
author = Rafael Garcia
description = Runtime for Ink, a scripting language for writing interactive narrative
long_description = file: README.rst
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.packages.find]
exclude =
    tests*
    dist*
    build*
